--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Layout_Background">#EDF2F1</color>
+    <color name="green_button_color">#8BC34A</color>
+    <color name="green_light">#4CAF50</color> <!-- Light Green -->
+    <color name="green_dark">#388E3C</color> <!-- Dark Green -->
+    <!-- Replace with your desired green -->
 </resources>
