Guest_HomePage - Tauqir

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="Layout_Background">#EDF2F1</color>
     <color name="green_button_color">#8BC34A</color>
     <color name="green_light">#4CAF50</color> <!-- Light Green -->
-    <color name="green_dark">#388E3C</color> <!-- Dark Green -->
+    <color name="green_dark">#388E3C</color>
+    <color name="Theme_green">#006A00</color>
+    <color name="Theme_Lightgreen">#97C93C</color><!-- Dark Green -->
     <!-- Replace with your desired green -->
 </resources>
