all register page

--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -90,7 +90,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/lgnButton"
+                android:id="@+id/adminlgnButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Log IN"
