--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -6,8 +6,6 @@
     android:focusableInTouchMode="true"
     android:background="@color/Layout_Background">
 
-
-
     <!-- SVG Drawable positioned at the very top -->
     <ImageView
         android:id="@+id/selectRoleTopImage"
@@ -65,14 +63,6 @@
                 android:textColorHint="#808080"
                 android:inputType="textEmailAddress" />
 
-
-
-
-
-
-
-
-
             <!-- Password -->
             <TextView
                 android:layout_width="wrap_content"
@@ -117,19 +107,19 @@
                 android:textStyle="normal"
                 android:textSize="16sp"
                 android:layout_marginTop="-10dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="0dp"
                 android:textColor="#000000" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/rgnButton"
+                android:id="@+id/RegButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Register Here"
-                android:layout_marginTop="14dp"
+                android:text="Register"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
-                android:textColor="@color/Layout_Background"
-                android:background="@color/green_button_color"
-                android:padding="5dp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/card_bg_row"
+                android:padding="12dp"
                 android:textStyle="bold"
                 android:textSize="16sp" >
             </androidx.appcompat.widget.AppCompatButton>
@@ -160,7 +150,7 @@
     <LinearLayout
         android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="25dp"
         android:layout_marginTop="0dp"
         android:background="@drawable/rounded_bottom_with_side_padding"
         android:layout_alignParentBottom="true"
@@ -172,6 +162,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </RelativeLayout>
