--- a/app/src/main/res/layout/activity_teacher_login.xml
+++ b/app/src/main/res/layout/activity_teacher_login.xml
@@ -95,9 +95,22 @@
                 android:layout_height="wrap_content"
                 android:text="Log IN"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="10dp"
                 android:textColor="@android:color/white"
                 android:background="@drawable/button"
+                android:padding="12dp"
+                android:textStyle="bold"
+                android:textSize="16sp" >
+            </androidx.appcompat.widget.AppCompatButton>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/TeaRegButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Register"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/card_bg_row"
                 android:padding="12dp"
                 android:textStyle="bold"
                 android:textSize="16sp" >
@@ -127,7 +140,7 @@
     <LinearLayout
         android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="20dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/rounded_bottom_with_side_padding"
         android:layout_alignParentBottom="true"
